exports[`BpkCalendarNav should render correctly 1`] = `
<div
  className="bpk-calendar-nav">
  <div
    className="bpk-calendar-nav__nudger">
    <button
      className="bpk-calendar-nav__button"
      disabled={true}
      onClick={[Function onClick]}>
      <svg
        className="bpk-calendar-nav__icon"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M14 2.5v13.1c0 1.3-1.5 1.9-2.4 1.1l-7.1-6.6c-.7-.6-.7-1.6 0-2.2l7.1-6.5c.9-.9 2.4-.2 2.4 1.1z" />
      </svg>
      <span
        className="visually-hidden">
        November 2016
      </span>
    </button>
  </div>
  <div
    className="bpk-calendar-nav__month">
    <select
      className="bpk-select"
      id="myCalendarNav_select"
      name="months"
      onChange={[Function onChange]}
      value="2016-12" />
  </div>
  <div
    className="bpk-calendar-nav__nudger">
    <button
      className="bpk-calendar-nav__button"
      disabled={true}
      onClick={[Function onClick]}>
      <svg
        className="bpk-calendar-nav__icon"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M4 2.5v13.1c0 1.3 1.5 1.9 2.4 1.1l7.1-6.5c.7-.6.7-1.6 0-2.2L6.4 1.4C5.5.5 4 1.2 4 2.5z" />
      </svg>
      <span
        className="visually-hidden">
        January 2017
      </span>
    </button>
  </div>
</div>
`;

exports[`BpkCalendarNav should render correctly with "minDate" and "maxDate" set 1`] = `
<div
  className="bpk-calendar-nav">
  <div
    className="bpk-calendar-nav__nudger">
    <button
      className="bpk-calendar-nav__button"
      disabled={true}
      onClick={[Function onClick]}>
      <svg
        className="bpk-calendar-nav__icon"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M14 2.5v13.1c0 1.3-1.5 1.9-2.4 1.1l-7.1-6.6c-.7-.6-.7-1.6 0-2.2l7.1-6.5c.9-.9 2.4-.2 2.4 1.1z" />
      </svg>
      <span
        className="visually-hidden">
        November 2016
      </span>
    </button>
  </div>
  <div
    className="bpk-calendar-nav__month">
    <select
      className="bpk-select"
      id="myCalendarNav_select"
      name="months"
      onChange={[Function onChange]}
      value="2016-12">
      <option
        value="2016-12">
        December 2016
      </option>
      <option
        value="2017-01">
        January 2017
      </option>
      <option
        value="2017-02">
        February 2017
      </option>
    </select>
  </div>
  <div
    className="bpk-calendar-nav__nudger">
    <button
      className="bpk-calendar-nav__button"
      disabled={false}
      onClick={[Function onClick]}>
      <svg
        className="bpk-calendar-nav__icon"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M4 2.5v13.1c0 1.3 1.5 1.9 2.4 1.1l7.1-6.5c.7-.6.7-1.6 0-2.2L6.4 1.4C5.5.5 4 1.2 4 2.5z" />
      </svg>
      <span
        className="visually-hidden">
        January 2017
      </span>
    </button>
  </div>
</div>
`;
